# Compiler-from-C-to-RISC-V

./: CMakeLists.txt  cgen.c
tests/cgen/sample-tests/: mytest.61c  mytest2.61c
